Chat list, private messages

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 #header{
 	text-align:center;
-	height:80px;
+	height:40px;
 	width:60%;
 	margin-left:20%;
 	background:#666;
@@ -26,18 +26,31 @@ a{
 #side_panel{
 	border:double;
 	position:absolute;
-	margin-top:10%;
+	margin-top:2%;
 	margin-left:80%;
 	width:15%;
 	height:60%;
 	background-color:#666;
 	margin-right:2%;
 }
+
+#left_panel{
+	border:double;
+	position:absolute;
+	margin-top:2%;
+	margin-right:80%;
+	width:20%;
+	height:100%;
+	background-color:#666;
+	margin-right:2%;
+}
+
+
 #chat_area{
 	border:double;
 	border-color:#CCC;
 	position:absolute;
-	margin-top:10%;
+	margin-top:2%;
 	margin-left:25%;
 background-color:#666;
 	width:50%;
